# danfse-gov-generator

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  sample.xml
src/danfse/: api.py
src/danfse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/danfse/domain/: models.py
src/danfse/layout/: constants.py  coordinates.py  layout_engine.py  models.py  reflow.py  specs.py  visibility.py
src/danfse/parser/: mapper.py  xml_parser.py
src/danfse/renderers/: pdf_renderer.py  qrcode.py
src/danfse/renderers/assets/: __init__.py
src/danfse/rules/: __init__.py  composite.py  danfse_formatter.py  descriptions.py  formatters.py  suppression.py  xsd_catalog.py
src/danfse/rules/catalog/: field_specs.py
src/danfse/rules/catalog/data/: xsd_descriptions.json
src/danfse/rules/formatting/: __init__.py
src/danfse/rules/models/: __init__.py  formatted.py
src/gerador_danfse/: __init__.py  api.py  cli.py  exceptions.py
src/gerador_danfse/domain/: enums.py
src/gerador_danfse/layout/: __init__.py  constants.py  field_values.py  layout_engine.py  models.py  reflow.py  specs.py  visibility.py
src/gerador_danfse/parser/: mapper.py
src/gerador_danfse/renderers/: pdf_renderer.py  pdf_text.py  watermark.py
src/gerador_danfse/renderers/assets/: __init__.py
src/gerador_danfse/rules/: __init__.py
src/gerador_danfse/rules/catalog/: __init__.py  xsd.py
src/gerador_danfse/rules/formatter/: __init__.py  danfse.py
src/gerador_danfse/rules/formatting/: __init__.py  composite.py  descriptions.py  primitives.py  suppression.py
src/gerador_danfse/rules/models/: __init__.py
tests/: test_generate_pdf.py
tests/fixtures/gov/: nota_gov_1_29154166000144.xml  nota_gov_1_33762922000195.xml  nota_gov_1_39549075000161.xml  nota_gov_215_1750331400100.xml  nota_gov_2600000000196_17086031000100.xml  nota_gov_2600000000197_17086031000100.xml  nota_gov_2_39549075000161.xml  nota_gov_3_39549075000161.xml  nota_gov_439_01107244000130.xml  nota_gov_4578_16819228000148.xml  nota_gov_4_39549075000161.xml
tests/unit/layout/: test_layout_engine.py  test_logo.py  test_pdf_renderer.py
tests/unit/parser/: conftest.py  expected_domain.py  test_xml_parser.py
tests/unit/rules/: conftest.py  expected_formatted.py  test_danfse_formatter.py  test_formatters.py  test_suppression.py  test_xsd_catalog.py
