[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "danfse"
version = "0.1.0"
description = "Generate DANFSe PDF (auxiliary NFS-e document) from Brazilian NFS-e XML."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "DANFSe Contributors" }]
keywords = ["nfse", "danfse", "brazil", "pdf", "xml"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
  "pydantic>=2.13.4",
  "reportlab>=4.0.0",
]

[project.optional-dependencies]
qrcode = ["qrcode[pil]>=7.4.2", "pillow>=10.0.0"]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://pypi.org/project/danfse/"

[project.scripts]
danfse = "danfse.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

