[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gerador_danfse"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src/gerador_danfse",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]


[project]
name = "gerador-danfse"
version = "1.0.0"
description = "Generate DANFSe PDF (auxiliary NFS-e document) from Brazilian NFS-e XML."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{name = "João Gabriel Sampaio de Barros", email = "jgabrielsb2002@gmail.com"}]
keywords = ["nfse", "danfse", "brazil", "pdf", "xml"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
  "lxml>=5.0.0",
  "pydantic>=2.13.4",
  "reportlab>=4.0.0",
  "qrcode[pil]>=7.4.2", 
  "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://pypi.org/project/gerador-danfse/"

[project.scripts]
danfse = "danfse.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"danfse.rules.catalog.data" = ["*.json"]
"danfse.renderers.assets" = ["*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

